pkl-core/src/test/files/LanguageSnippetTests/input/errors/moduleImportVersionCheck.pkl
import "moduleWithHighMinPklVersion.pkl"

res1 = moduleWithHighMinPklVersion.x
